[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Abilities/Sludge/Animation/Projectile/sprite_2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Abilities/Sludge/Animation/Projectile/sprite_0.png" type="Texture" id=2]
[ext_resource path="res://Assets/Abilities/Sludge/Animation/Projectile/sprite_1.png" type="Texture" id=3]
[ext_resource path="res://Abilities/Sludge.gd" type="Script" id=4]
[ext_resource path="res://Assets/Abilities/Sludge/Animation/Explosion/sprite_0.png" type="Texture" id=5]
[ext_resource path="res://Assets/Abilities/Sludge/Animation/Explosion/sprite_1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Abilities/Sludge/Animation/Explosion/sprite_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Abilities/Sludge/Animation/Explosion/sprite_3.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.1038

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 92.4231

[node name="Sludge" type="Area2D"]
script = ExtResource( 4 )

[node name="Projectile" type="AnimatedSprite" parent="."]
z_index = 4
frames = SubResource( 1 )
playing = true

[node name="ProjectileCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.297636, 0.297638 )
shape = SubResource( 2 )

[node name="Explosion" type="AnimatedSprite" parent="."]
position = Vector2( 1.79419, 1.75876 )
scale = Vector2( 5, 5 )
frames = SubResource( 3 )
frame = 3

[node name="ExplosionCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.122627, 0.694996 )
shape = SubResource( 4 )
disabled = true

[node name="ExplosionDuration" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Sludge_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Sludge_body_exited"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="timeout" from="ExplosionDuration" to="." method="_on_ExplosionDuration_timeout"]
